tests/ui/feature-gates/feature-gate-native_link_modifiers_as_needed.stderr
error[E0658]: linking modifier `as-needed` is unstable
  --> $DIR/feature-gate-native_link_modifiers_as_needed.rs:1:50
   |
LL | #[link(name = "foo", kind = "dylib", modifiers = "+as-needed")]
   |                                                  ^^^^^^^^^^^^
   |
   = note: see issue #81490 <https://github.com/crablang/crablang/issues/81490> for more information
   = help: add `#![feature(native_link_modifiers_as_needed)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0658`.
